<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/sign_out_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#f0f0f0"
        android:gravity="center|right"
        android:orientation="horizontal"
        android:padding="10dp" >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/you_are_signed_in"
            android:textColor="#808080" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#f0f0f0"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/sign_in_why"
            android:textColor="#808080" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ad_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <include layout="@layout/ad_layout" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/google_play_related"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_bar"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/new_quick_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_quick_game" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/new_game_live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game_live" />

            <Button
                android:id="@+id/invites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Invites" />

        </LinearLayout>

        <Button
            android:id="@+id/view_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements" />
    </LinearLayout>

    <Button
        android:id="@+id/new_game_same_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_play_related"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game_same_device" />

    <Button
        android:id="@+id/new_game_vs_ai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_game_same_device"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/new_game_vs_ai" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/new_game_same_device"
        android:layout_toLeftOf="@+id/google_play_related"
        android:src="@drawable/games_controller_green_med" />

</RelativeLayout>