<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/choice_chance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:entries="@array/chance_array" />

    <TableLayout
        android:id="@+id/custom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/chance_label_my_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chance_label_my_marker" />

            <SeekBar
                android:id="@+id/chance_seek_my_marker"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="300" />

            <TextView
                android:id="@+id/chance_percent_my_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/chance_label_opponent_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chance_label_opponent_marker" />

            <SeekBar
                android:id="@+id/chance_seek_opponent_marker"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="300" />

            <TextView
                android:id="@+id/chance_percent_opponent_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/chance_label_remove_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chance_label_remove_marker" />

            <SeekBar
                android:id="@+id/chance_seek_remove_marker"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="300" />

            <TextView
                android:id="@+id/chance_percent_remove_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

</LinearLayout>